remove some stock code for the page to work for now

--- a/location/templates/location/location_list.html
+++ b/location/templates/location/location_list.html
@@ -29,14 +29,7 @@
             <td class="d-none d-lg-table-cell align-middle">{{ location.room }}</td>
             <td class="d-none d-lg-table-cell small">{{ location.description|truncatechars:150 }}</td>
             <td class="d-none d-lg-table-cell">
-              {% for stock in location.stocks_aggregated %}
-                <a href="{% url 'item_detail' stock.item__id %}">{{ stock.item__name }}</a>
-                {% if stock.count > 1 %}
-                  <span class="text-muted small">x</span>
-                  <span class="stock-text-color fw-bold">{{ stock.count }}</span>
-                {% endif %}
-                {% if not forloop.last %},{% endif %}
-              {% endfor %}
+              {{ location.stock_entries }}
             </td>
             <td class="align-middle">
               <a href="{% url 'location_update' location.pk %}"><i class="bi bi-pencil-square"></i></a>
