stock create view and stock list template

--- a/item/templates/item/item_detail.html
+++ b/item/templates/item/item_detail.html
@@ -161,7 +161,7 @@
                   </td>
                   <td>{{ stock.expiry_date|date:'d/m/Y' }}</td>
                   <td>
-                    <a href="{% url 'location_detail' stock.location.pk %}"
+                    <a href="#"
                        title="location details">{{ stock.location }}</a>
                   </td>
                   <td>{{ stock.remaining_quantity_display }}</td>
