--- a/item/templates/stock/stock_create.html
+++ b/item/templates/stock/stock_create.html
@@ -6,9 +6,115 @@
   <i class="bi bi-box-seam-fill stock-text-color"></i> Commit to Stock
 {% endblock panel_title %}
 {% block create_form %}
-  {{ form.as_p }}
-  {{ entries.management_form }}
-  {% for entry_form in entries.forms %}{{ entry_form.as_p }}{% endfor %}
+  <div class="px-3 pt-3">
+    <div class="mb-3">
+      <h5>Stock/delivery Information</h5>
+    </div>
+    <span class="text-danger">{{ form.non_field_errors }}</span>
+    {# item search input #}
+    <div id="item-input" class="type-search-input">
+      <div class="input-group mb-3">
+        <span class="input-group-text input-group-text-fw-sm">Item:</span>
+        <input type="text"
+               name="item_query"
+               id="item_search_box"
+               class="form-control"
+               autocomplete="off"
+               required
+               value="{{ item_name|default_if_none:'' }}"
+               placeholder="Start typing to enter an item..."
+               hx-trigger="keyup changed delay:500ms"
+               hx-get="{% url 'item_search' %}"
+               hx-target="#itemSearchResults">
+        <span class="input-group-text">
+          <a href="{% url 'item_create' %}?next={{ request.path }}"
+             class="btn btn-sm btn-light"
+             data-bs-toggle="tooltip"
+             title="Add a new item">
+            <i class="bi bi-plus-circle text-success"></i>
+          </a>
+        </span>
+      </div>
+      <span class="text-danger">{{ form.item.errors }}</span>
+      <div id="itemSearchResults" class="list-group type-search-result"></div>
+      <input type="text"
+             name="item"
+             id="id_item"
+             value="{{ form.item.value|default_if_none:'' }}"
+             hidden>
+    </div>
+    {# item search input end #}
+    <div class="input-group mb-3">
+      <span class="input-group-text input-group-text-fw-sm">{{ form.lot_number.label_tag }}</span>
+      {{ form.lot_number }}
+    </div>
+    <span class="text-danger">{{ form.lot_number.errors }}</span>
+    <div class="input-group mb-3">
+      <span class="input-group-text input-group-text-fw-sm">{{ form.expiry_date.label_tag }}</span>
+      {{ form.expiry_date }}
+    </div>
+    <span class="text-danger">{{ form.expiry_date.errors }}</span>
+    <div class="input-group mb-3">
+      <span class="input-group-text input-group-text-fw-sm">{{ form.delivery_date.label_tag }}</span>
+      {{ form.delivery_date }}
+    </div>
+    <span class="text-danger">{{ form.delivery_date.errors }}</span>
+    <div class="input-group mb-3">
+      <span class="input-group-text input-group-text-fw-sm">{{ form.condition.label_tag }}</span>
+      {{ form.condition }}
+    </div>
+    <span class="text-danger">{{ form.condition.errors }}</span>
+    <div class="input-group mb-3">
+      <span class="input-group-text input-group-text-fw-sm">{{ form.comments.label_tag }}</span>
+      {{ form.comments }}
+    </div>
+    <span class="text-danger">{{ form.comments.errors }}</span>
+    <div class="mb-3">
+      <h5>Stock items/storage Information</h5>
+    </div>
+    <div class="input-group mb-3">
+      <span class="input-group-text input-group-text-fw-sm">{{ form.quantity.label_tag }}</span>
+      {{ form.quantity }}
+    </div>
+    <span class="text-danger">{{ form.quantity.errors }}</span>
+    {{ entries.management_form }}
+    {% with entry_form=entries.forms.0 %}
+      {# location search input #}
+      <div id="location-input" class="type-search-input">
+        <div class="input-group mb-3">
+          <span class="input-group-text input-group-text-fw-sm">Location</span>
+          <input type="text"
+                 name="location_query"
+                 id="location_search_box"
+                 class="form-control"
+                 required
+                 autocomplete="off"
+                 value="{{ location_name|default_if_none:'' }}"
+                 placeholder="Start typing to enter a location..."
+                 hx-trigger="keyup changed delay:500ms"
+                 hx-get="{% url 'location_search' %}"
+                 hx-target="#locationSearchResults">
+          <span class="input-group-text">
+            <a href="{% url 'location_create' %}?next={{ request.path }}"
+               class="btn btn-sm btn-light"
+               data-bs-toggle="tooltip"
+               title="Add a new location">
+              <i class="bi bi-plus-circle text-success"></i>
+            </a>
+          </span>
+        </div>
+        <span class="text-danger">{{ form.location.errors }}</span>
+        <div id="locationSearchResults" class="list-group type-search-result"></div>
+        <input type="text"
+               name="{{ entry_form.prefix }}-location"
+               id="id_location"
+               value="{{ form.location.value|default_if_none:'' }}"
+               hidden>
+      </div>
+      <span class="text-danger">{{ form.location.errors }}</span>
+      {# location search input end #}
+    {% endwith %}
+  </div>
 {% endblock create_form %}
 {% block js %}
   <script>
@@ -19,6 +125,12 @@
       resultsDivId: "itemSearchResults",
       resultClass: "item-search-result-item",
       valueAttribute: "item-pk"
+    },  {
+      searchBoxId: "location_search_box",
+      textInputId: "id_location",
+      resultsDivId: "locationSearchResults",
+      resultClass: "location-search-result-location",
+      valueAttribute: "location-pk"
     }];
 
     // Initialize each search box listener
