--- a/item/templates/stock/stock_update.html
+++ b/item/templates/stock/stock_update.html
@@ -3,15 +3,15 @@
   Stock
 {% endblock title %}
 {% block panel_title %}
-  <i class="bi bi-box-seam-fill stock-text-color"></i> Update Stock Items
+  <i class="bi bi-box-seam-fill stock-text-color"></i> Update Stock
 {% endblock panel_title %}
 {% block update_form %}
   <div class="px-3 pt-3">
     <span class="text-danger">{{ form.non_field_errors }}</span>
-    {# item search input #}
+    {# item search input UI disabled #}
     <div id="item-input" class="type-search-input">
       <div class="input-group mb-3">
-        <span class="input-group-text input-group-text-fw-sm">Item</span>
+        <span class="input-group-text input-group-text-fw-sm">{{ form.item.label_tag }}</span>
         <input type="text"
                name="item_query"
                class="form-control"
@@ -26,86 +26,30 @@
     </div>
     {# item search input end #}
     <div class="input-group mb-3">
-      <span class="input-group-text input-group-text-fw-sm">Lot Number</span>
-      <input type="text"
-             name="lot_number"
-             class="form-control"
-             value="{{ form.lot_number.value|default_if_none:'' }}"
-             autocomplete="off"
-             placeholder="Lot number or batch number...">
+      <span class="input-group-text input-group-text-fw-sm">{{ form.lot_number.label_tag }}</span>
+      {{ form.lot_number }}
     </div>
     <span class="text-danger">{{ form.lot_number.errors }}</span>
     <div class="input-group mb-3">
-      <span class="input-group-text input-group-text-fw-sm">Expiry Date</span>
-      <input type="date"
-             name="expiry_date"
-             class="form-control"
-             value="{{ form.expiry_date.value|date:'Y-m-d' }}"
-             placeholder="Expiry Date">
+      <span class="input-group-text input-group-text-fw-sm">{{ form.expiry_date.label_tag }}</span>
+      {{ form.expiry_date }}
     </div>
     <span class="text-danger">{{ form.expiry_date.errors }}</span>
     <div class="input-group mb-3">
-      <span class="input-group-text input-group-text-fw-sm">Quantity</span>
-      <input type="text" name="quantity" value="1" class="form-control" disabled>
+      <span class="input-group-text input-group-text-fw-sm">{{ form.delivery_date.label_tag }}</span>
+      {{ form.delivery_date }}
     </div>
+    <span class="text-danger">{{ form.delivery_date.errors }}</span>
     <div class="input-group mb-3">
-      <span class="input-group-text input-group-text-fw-sm">Condition</span>
-      <select name="condition" class="form-select">
-        {% for condition_id, condition_name in form.fields.condition.choices %}
-          <option value="{{ condition_id }}"
-                  {% if condition_id == form.condition.value %}selected{% endif %}>
-            {{ condition_name }}
-          </option>
-        {% endfor %}
-      </select>
+      <span class="input-group-text input-group-text-fw-sm">{{ form.condition.label_tag }}</span>
+      {{ form.condition }}
     </div>
     <span class="text-danger">{{ form.condition.errors }}</span>
-    {# location search input #}
-    <div id="location-input" class="type-search-input">
-      <div class="input-group mb-3">
-        <span class="input-group-text input-group-text-fw-sm">Location</span>
-        <input type="text"
-               name="location_query"
-               id="location_search_box"
-               class="form-control"
-               required
-               autocomplete="off"
-               value="{{ location_name|default_if_none:'' }}"
-               placeholder="Start typing to enter a location..."
-               hx-trigger="keyup changed delay:500ms"
-               hx-get="{% url 'location_search' %}"
-               hx-target="#locationSearchResults">
-        <span class="input-group-text">
-          <a href="{% url 'location_create' %}?next={{ request.path }}"
-             class="btn btn-sm btn-light"
-             data-bs-toggle="tooltip"
-             title="Add a new location">
-            <i class="bi bi-plus-circle text-success"></i>
-          </a>
-        </span>
-      </div>
-      <span class="text-danger">{{ form.location.errors }}</span>
-      <div id="locationSearchResults" class="list-group type-search-result"></div>
-      <input type="text"
-             name="location"
-             id="id_location"
-             value="{{ form.location.value|default_if_none:'' }}"
-             hidden>
+    <div class="input-group mb-3">
+      <span class="input-group-text input-group-text-fw-sm">{{ form.comments.label_tag }}</span>
+      {{ form.comments }}
     </div>
+    <span class="text-danger">{{ form.comments.errors }}</span>
   </div>
 {% endblock update_form %}
-{% block js %}
-  <script>
-  const config = 
-  {
-    searchBoxId: "location_search_box",
-    textInputId: "id_location",
-    resultsDivId: "locationSearchResults",
-    resultClass: "location-search-result-location",
-    valueAttribute: "location-pk"
-  };
-  
-  TypeSearchResultListenerConfig(config);
 
-  </script>
-{% endblock js %}
