--- a/item/templates/stock/stock_detail.html
+++ b/item/templates/stock/stock_detail.html
@@ -16,6 +16,7 @@
 {% endblock panel_actions %}
 {% block panel_content %}
   <div class="p-3">
+    {# stock info #}
     <div class="panel mb-4">
       <div class="panel-heading d-flex justify-content-between">
         <span class="fw-bold"><i class="bi bi-info-circle-fill stock-text-color"></i> Stock Details</span>
@@ -28,47 +29,108 @@
               <td width="30%">
                 <a href="{% url 'item_detail' stock.item.pk %}">{{ stock.item.name }}</a>
               </td>
-              <td width="20%"  class="text-muted">Stock Number:</td>
+              <td width="20%"  class="text-muted"></td>
               <td width="30%">
-                <span class="ms-3 badge rounded-pill bg-info">{{ stock.ordinal_number }}</span>
+                <span class="ms-3 badge rounded-pill bg-info"></span>
               </td>
             </tr>
             <tr>
               <td class="text-muted">Product ID:</td>
               <td>{{ stock.item.product_id }}</td>
-              <td class="text-muted">Delivery Date:</td>
-              <td>
-               
-              </td>
+              <td class="text-muted">Expiry Date:</td>
+              <td>{{ stock.expiry_date|date:"d/m/Y" }}</td>
             </tr>
             <tr>
               <td class="text-muted">Lot Number:</td>
               <td>{{ stock.lot_number }}</td>
-              <td class="text-muted">Expiry Date:</td>
-              <td>{{ stock.expiry_date|date:"d/m/Y" }}</td>
+              <td class="text-muted">Delivery Date:</td>
+              <td>{{ stock.delivery_date|date:"d/m/Y" }}</td>
             </tr>
             <tr>
               <td class="text-muted">Category:</td>
               <td>
                 <a href="{% url 'category_detail' stock.item.category.pk %}">{{ stock.item.category.name }}</a>
               </td>
-              <td class="text-muted">In-use Date:</td>
-              <td>{{ stock.in_use_date|date:'d/m/Y' }}</td>
+              <td class="text-muted">Received Condition:</td>
+              <td>{% delivery_condition stock.condition True %}</td>
             </tr>
             <tr>
-              <td class="text-muted">Location:</td>
-              <td>
-                <a href="{% url 'location_detail' stock.location.pk %}">{{ stock.location.name }}</a>
-              </td>
-              <td class="text-muted">Quantity Remain:</td>
-              <td class="fw-bold">
-                <div class="max-width-150px">{% include "usage/usage_htmx_updated.html" %}</div>
-              </td>
+              <td class="text-muted">Notes:</td>
+              <td colspan="3">{{ stock.comments }}</td>
             </tr>
           </tbody>
         </table>
       </div>
     </div>
+    {# stock info end #}
+    {# attachments #}
+    <div class="panel mb-4">
+      <div class="panel-heading d-flex justify-content-between align-items-center pe-2">
+        <span class="fw-bold"><i class="bi bi-folder2-open text-warning"></i> Documents</span>
+        <a hx-get="{% url 'stock_attachment_upload' stock.pk %}"
+           hx-trigger="click"
+           hx-target="#crudModal .modal-content"
+           hx-swap="innerHTML"
+           data-bs-toggle="modal"
+           data-bs-target="#crudModal"
+           href="javascript:"
+           class="btn btn-sm btn-success"><i class="bi bi-file-earmark-arrow-up"></i> Upload</a>
+      </div>
+      <div class="panel-content">
+        {% if attachments|length %}
+          <table class="table table-sm table-hover">
+            <thead class="text-small">
+              <tr>
+                <th class="text-muted d-none d-lg-block">Uploaded</th>
+                <th class="text-muted">Name</th>
+                <th class="text-muted">File Name</th>
+                <th class="text-muted d-none d-lg-block">Description</th>
+                <th></th>
+              </tr>
+            </thead>
+            <tbody>
+              {% for file in attachments %}
+                <tr>
+                  <td class="d-none d-lg-block">
+                    <span title="{{ file.uploaded_at|date:'d/m/Y H:i:s' }}">{{ file.uploaded_at|date:'d/m/Y' }}</span>
+                  </td>
+                  <td>{{ file.name }}</td>
+                  <td>
+                    {% if file.filetype %}
+                      <i class="bi bi-filetype-{{ file.filetype }} text-warning"></i>
+                    {% else %}
+                      <i class="bi bi-file-earmark text-warning"></i>
+                    {% endif %}
+                    <a href="{{ file.file.url }}" title="Open/download {{ file.filename }}">{{ file.filename }}</a>
+                  </td>
+                  <td class="d-none d-lg-block">
+                    <span class="small">{{ file.description|default:"&nbsp;" }}</span>
+                  </td>
+                  <td>
+                    <a hx-get="{% url 'stock_attachment_update' file.id %}"
+                       hx-trigger="click"
+                       hx-target="#crudModal .modal-content"
+                       hx-swap="innerHTML"
+                       data-bs-toggle="modal"
+                       data-bs-target="#crudModal"
+                       href="javascript:"><i class="bi bi-pencil-square"></i></a>
+                    <a hx-get="{% url 'stock_attachment_delete' file.id %}"
+                       hx-trigger="click"
+                       hx-target="#crudModal .modal-content"
+                       hx-swap="innerHTML"
+                       data-bs-toggle="modal"
+                       data-bs-target="#crudModal"
+                       href="javascript:"><i class="bi bi-trash"></i></a>
+                  </td>
+                </tr>
+              {% endfor %}
+            </tbody>
+          </table>
+        {% endif %}
+      </div>
+    </div>
+    {# attachments end #}
+    {# stock validations #}
     <div class="panel mb-4">
       <div class="panel-heading d-flex justify-content-between">
         <span class="fw-bold">
@@ -86,7 +148,7 @@
               <th width="20%" class="text-muted">Status</th>
               <th width="13%" class="text-muted">Validated</th>
               <th width="13%" class="text-muted">Authorised</th>
-              <th class="text-muted">Comments</th>
+              <th class="text-muted">Validation comments</th>
               <th width="10%" class="text-muted">Actions</th>
             </tr>
           </thead>
@@ -108,7 +170,7 @@
                     {{ sv.validation.authorised_by.initials }}
                   </span>
                 </td>
-                <td>{{ sv.validation.comments }}</td>
+                <td>{{ sv.validation.comments|default_if_none:"" }}</td>
                 <td>
                   <a href="" title="Edit the validation"><i class="bi bi-pencil-square"></i></a>
                   <a hx-get=""
@@ -125,12 +187,56 @@
         </table>
       </div>
     </div>
+    {# stock validations end #}
+    {# stock entries #}
     <div class="panel mb-4">
       <div class="panel-heading d-flex justify-content-between">
-        <span class="fw-bold"><i class="bi bi-boxes stock-text-color"></i> {{ stock.item.name }} - all stocks</span>
+        <span class="fw-bold"><i class="bi bi-boxes stock-text-color"></i> Stock Entries</span>
       </div>
-      <div class="panel-content">Other stock of the same item list of them</div>
+      <div class="panel-content">
+        <table class="table table-sm">
+          <thead>
+            <tr>
+              <th class="text-muted text-center">Box</th>
+              <th class="text-muted text-center">In-Use</th>
+              <th class="text-muted text-center">Quantity</th>
+              <th class="text-muted">Location</th>
+              <th class="text-muted">Comments</th>
+              <th class="text-muted text-center">Actions</th>
+            </tr>
+          </thead>
+          <tbody class="small">
+            {% for entry in stock.entries.all %}
+              <tr>
+                <td class="text-center">
+                  <span class="icon-with-text">
+                    <i class="bi bi-box2-fill icon-with-text-icon {% if entry.remaining_quantity == 0 %}text-gray-300{% else %}{% stock_entry_colour entry.ordinal_number %}-text-color{% endif %}"></i>
+                    <span class="icon-with-text-low">{{ entry.ordinal_number }}</span>
+                  </span>
+                </td>
+                <td class="text-center">{{ entry.in_use_date|date:"d/m/Y"|default_if_none:"" }}</td>
+                <td class="text-center">{{ entry.remaining_quantity_display }}</td>
+                <td>{{ entry.location.name }}</td>
+                <td>{{ entry.comments }}</td>
+                <td class="text-center">
+                  <a href="{% url 'stock_entry_update' entry.pk %}"
+                     title="Edit {{ entry.ordinal_number }}"><i class="bi bi-pencil-square"></i></a>
+                  <a hx-get="{% url 'stock_entry_delete' entry.pk %}"
+                     hx-trigger="click"
+                     hx-target="#crudModal .modal-content"
+                     hx-swap="innerHTML"
+                     data-bs-toggle="modal"
+                     data-bs-target="#crudModal"
+                     title="Delete {{ entry.ordinal_number }}"
+                     href="javascript:"><i class="bi bi-trash"></i></a>
+                </td>
+              </tr>
+            {% endfor %}
+          </tbody>
+        </table>
+      </div>
     </div>
+    {# stock entries end #}
   </div>
   {% include "partials/object_last_updated.html" %}
 {% endblock panel_content %}
